--- a/album-viewer/package.json
+++ b/album-viewer/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "d3": "^7.9.0",
+    "jsdom": "^28.0.0",
+    "node-fetch": "^3.3.2",
     "vue": "^3.4.0"
   },
   "devDependencies": {
