--- a/album-viewer/package.json
+++ b/album-viewer/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.4.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^24.3.0",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vue/tsconfig": "^0.8.1",
