--- a/album-viewer/package.json
+++ b/album-viewer/package.json
@@ -15,7 +15,8 @@
     "d3": "^7.9.0",
     "jsdom": "^28.0.0",
     "node-fetch": "^3.3.2",
-    "vue": "^3.4.0"
+    "vue": "^3.4.0",
+    "vue-i18n": "^11.2.8"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
